@@ -303,16 +303,29 @@ static GSM_Error SMSDFiles_FindOutboxSMS(GSM_MultiSMSMessage *sms, GSM_SMSDConfi
 
 	if (sms->Number != 0) {
 		DecodeUnicode(sms->SMS[0].Number,Buffer);
-		SMSD_Log(1, Config, "Found %i sms to \"%s\" with text \"%s\" cod %i lgt %i udh: t %i l %i dlr: %i fls: %i",
-			sms->Number,
-			Buffer,
-			DecodeUnicodeString(sms->SMS[0].Text),
-			sms->SMS[0].Coding,
-			sms->SMS[0].Length,
-			sms->SMS[0].UDH.Type,
-			sms->SMS[0].UDH.Length,
-			Config->currdeliveryreport,
-			SMSInfo.Class);
+		if (strchr(options, 'b')) { // WAP bookmark as title,URL
+			SMSD_Log(1, Config, "Found %i sms to \"%s\" with bookmark \"%s\" cod %i lgt %i udh: t %i l %i dlr: %i fls: %i",
+				sms->Number,
+				Buffer,
+				DecodeUnicodeString(SMSInfo.Entries[0].Bookmark->Address),
+				sms->SMS[0].Coding,
+				sms->SMS[0].Length,
+				sms->SMS[0].UDH.Type,
+				sms->SMS[0].UDH.Length,
+				Config->currdeliveryreport,
+				SMSInfo.Class);
+		} else {
+			SMSD_Log(1, Config, "Found %i sms to \"%s\" with text \"%s\" cod %i lgt %i udh: t %i l %i dlr: %i fls: %i",
+				sms->Number,
+				Buffer,
+				DecodeUnicodeString(sms->SMS[0].Text),
+				sms->SMS[0].Coding,
+				sms->SMS[0].Length,
+				sms->SMS[0].UDH.Type,
+				sms->SMS[0].UDH.Length,
+				Config->currdeliveryreport,
+				SMSInfo.Class);
+		}
 	} else {
 		SMSD_Log(1, Config, "error: SMS-count = 0");
 	}
